--- a/icard_react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
+++ b/icard_react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
@@ -10,8 +10,23 @@
         cursor: pointer;
     }
 
+    .ui.label {
+        margin: 0;
+        font-size: 20px;
+        position: absolute;
+        top: 30px;
+    }
+
     svg{
         height: 200px;
         width: 200px;
+
+        .table-admin svg.pending path {
+            fill: #0094e3;
+          }
+          
     }
+
+    
+
 }
