103: No se puede marcar la imagen de color, Muestra de mesas ocupadas y Link para cargar la informacion de la mesa

--- a/icard_react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
+++ b/icard_react/src/components/Admin/Table/TableAdmin/TableAdmin.scss
@@ -21,8 +21,11 @@
         height: 200px;
         width: 200px;
 
-        .table-admin svg.pending path {
-            fill: #0094e3;
+        &.busy{
+            fill: #bb7900;
+        }
+        &.pending{
+            fill: #0094e3 !important;
           }
           
     }
